[gd_scene load_steps=13 format=3 uid="uid://2bxnpi0o6m4"]

[ext_resource type="Script" path="res://nodos/flip_enemy/flip_enemy.gd" id="1_oqvle"]
[ext_resource type="Texture2D" uid="uid://bqh0w6153q0gf" path="res://arte/prota.png" id="2_ghnxk"]
[ext_resource type="Script" path="res://nodos/flip_enemy/hitbox.gd" id="3_fx77k"]
[ext_resource type="Script" path="res://nodos/flip_enemy/vision.gd" id="3_v3lnu"]
[ext_resource type="Script" path="res://nodos/flip_enemy/state_machine_flip_enemy.gd" id="4_5len2"]
[ext_resource type="Script" path="res://nodos/flip_enemy/idle_state_flip_enemy.gd" id="5_0d7pj"]
[ext_resource type="Script" path="res://nodos/flip_enemy/atack_state_flip_enemy.gd" id="6_gt3wc"]
[ext_resource type="Script" path="res://nodos/flip_enemy/back_state_flip_enemy.gd" id="7_5idwa"]
[ext_resource type="Script" path="res://nodos/flip_enemy/dead_state_flip_enemy.gd" id="7_sulay"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0ajd"]
size = Vector2(97, 134)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3m7yj"]
size = Vector2(96, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjnno"]
size = Vector2(96, 24)

[node name="flip_enemy" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 9
script = ExtResource("1_oqvle")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(0.520513, 0.520513)
texture = ExtResource("2_ghnxk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i0ajd")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(50, 0)
target_position = Vector2(0, -84)
collision_mask = 8

[node name="deteccion" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="deteccion"]
polygon = PackedVector2Array(0, 0, -200.01, 300, 200, 300)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32
script = ExtResource("3_fx77k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -56)
shape = SubResource("RectangleShape2D_3m7yj")
debug_color = Color(0.913725, 0.156863, 0.615686, 0.419608)

[node name="back_hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="back_hitbox"]
position = Vector2(0, 56)
shape = SubResource("RectangleShape2D_rjnno")
debug_color = Color(0, 0.639216, 0.380392, 0.419608)

[node name="vision_flip_enemy" type="RayCast2D" parent="."]
target_position = Vector2(0, 500)
collision_mask = 9
script = ExtResource("3_v3lnu")

[node name="state_machine_flip_enemy" type="Node" parent="." node_paths=PackedStringArray("initial_state", "Enemigo")]
script = ExtResource("4_5len2")
initial_state = NodePath("idle_state_flip_enemy")
Enemigo = NodePath("..")

[node name="idle_state_flip_enemy" type="Node" parent="state_machine_flip_enemy"]
script = ExtResource("5_0d7pj")

[node name="attack_state_flip_enemy" type="Node" parent="state_machine_flip_enemy"]
script = ExtResource("6_gt3wc")

[node name="back_state_flip_enemy" type="Node" parent="state_machine_flip_enemy"]
script = ExtResource("7_5idwa")

[node name="dead_state_flip_enemy" type="Node" parent="state_machine_flip_enemy" node_paths=PackedStringArray("corpse_timer")]
script = ExtResource("7_sulay")
corpse_timer = NodePath("../../corpse_timer")

[node name="corpse_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="deteccion" to="state_machine_flip_enemy/idle_state_flip_enemy" method="_on_deteccion_body_entered"]
[connection signal="body_entered" from="back_hitbox" to="state_machine_flip_enemy/attack_state_flip_enemy" method="_on_back_hitbox_body_entered"]
